--- a/dissertation/interimreport.tex
+++ b/dissertation/interimreport.tex
@@ -454,20 +454,12 @@ Influence distance & 300 & 600 & 100  & 4     \\ \hline
 \subsubsection{Conclusions}
 In the end, the genetic algorithms only improved the simulations by about 2\%\cite{Balaji2017} which could mean that the original range of constants was already a good set to work with. However, there is still scope for even greater improvements if the genetic algorithm was to be run with a greater number of test scenarios, bigger range of values to cycle through, and generally larger simulations.
 
-\subsection{Optimising Drone Delivery}
-
-
-\subsection{Prioritising Economic Value}
-% Thus far, we have shown that whilst there is great scope to utilise drones for delivery of physical goods, AATC technology only touches upon the routing aspect - how to get from point A to point B. In all the test cases, the drones' start and end points were hand-picked by the developers\cite{Balaji2017} to give an insight into how AATC would operate in a variety of scenarios.
-
-
-\subsubsection{Quality of Service}
-\subsubsection{Value Curve}
-\subsubsection{skdbsa}
-
 \subsection{Scalable Drone Network Architecture}
 The \textit{Internet of Drones} is a ``layered network control architecture'' to deal with the growing presence of drones in a secure, scalable manner\cite{Gharibi2016}. The author notes that as the volume of drones hits several thousands for a limited region, any centralised air traffic control system would not be able to handle the load, thus leading to the contribution of a decentralised solution. \\
 
+Drawing inspiration from other important network models such as Air Traffic Control, Cellular networks and the Internet - the author also goes on to state that separating the problem into different layers helps to abstract scalability issues, improve maintainability of the codebase and allow greater flexiblity to improve specific layers as time goes on\cite{Gharibi2016}. Therefore, the existing AATC model might be considered a good candidate to implement this scaling solution on top of. \\
+
+\newpage
 The author considers splitting the problem into several layers:
 \begin{enumerate}
   \item \textbf{Nodes} - points of interest connected together by \textit{airways} and \textit{intersections}.
@@ -495,11 +487,16 @@ The author considers splitting the problem into several layers:
   \end{figure}
 \end{enumerate}
 
-Much like AATC, separating the problem into different layers helps to abstract scalability issues, improve maintainability of the codebase and allow greater flexiblity to improve specific layers as time goes on. \cite{Gharibi2016}
+\subsection{Optimising Drone Delivery}
 
 
+\subsection{Prioritising Economic Value}
+% Thus far, we have shown that whilst there is great scope to utilise drones for delivery of physical goods, AATC technology only touches upon the routing aspect - how to get from point A to point B. In all the test cases, the drones' start and end points were hand-picked by the developers\cite{Balaji2017} to give an insight into how AATC would operate in a variety of scenarios.
 
 
+\subsubsection{Quality of Service}
+\subsubsection{Value Curve}
+\subsubsection{skdbsa}
 
 \subsection{SpatialOS}
 \subsubsection{Unity SDK}
