--- a/dissertation/interimreport.tex
+++ b/dissertation/interimreport.tex
@@ -21,7 +21,11 @@
 \usepackage{color}
 \usepackage[maxbibnames=99]{biblatex}
 \usepackage{csquotes}
+\usepackage{caption}
+\usepackage{subcaption}
+
 \bibliography{library}
+
 
 \definecolor{codegreen}{rgb}{0,0.6,0}
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
@@ -496,27 +500,68 @@ SpatialOS is a platform, created by \textit{Improbable}\cite{ImprobableWorldsLtd
 SpatialOS is a cloud-based computational platform that lets you use many servers and engines to power a single world. The platform coordinates a swarm of micro-services called workers, which overlap and dynamically reorganize to power a huge, seamless world. The platform also lets you handle a huge number of concurrent players across different devices in one world.
 \end{displayquote}
 
-Although most commonly used for large distributed game worlds, SpatialOS has been used for simulating cities, the backbone of the Internet and a model of the brain. It is an ideal platform for simulating ``independent entities that have a location in space''\cite{ImprobableWorldsLtd.2018}. \\
+Although most commonly used for large distributed game worlds, SpatialOS has been used for simulating cities\cite{Narula2017}, the backbone of the Internet\cite{ImprobableWorldsLtd.2016} and a model of the brain\cite{ImprobableWorldsLtd.2018}. It is an ideal platform for simulating ``independent entities that have a location in space''\cite{ImprobableWorldsLtd.2018}.
 
-Anybody is able to sign up and use SpatialOS to build games using either the Unity3D or Unreal game engines. Alternatively, one can use the C#, C++ and Java SDKs to create custom workers to be ran on SpatialOS deployments.
+\begin{figure}[!hbpt]
+\centering
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=\linewidth]{img/spatialos-diagram_current2.png}
+  \caption{The current approach.}
+  \label{fig:spatialos-diagram_current2}
+\end{subfigure}%
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=\linewidth]{img/spatialos-diagram_solution2.png}
+  \caption{How SpatialOS is different.}
+  \label{fig:spatialos-diagram_solution2}
+\end{subfigure}
+\caption{Comparing approaches to multiplayer. \cite{ImprobableWorldsLtd.2018b}}
+\label{fig:test}
+\end{figure}
+
+Anybody is able to sign up and use SpatialOS to build games using either the Unity3D or Unreal game engines. Alternatively, one can use the C#, C++ and Java SDKs to create custom workers to be ran on SpatialOS deployments. \\
+
+A benefit of SpatialOS's Unity and Unreal SDKs is that creating a sole game client, without manually writing network code, is almost enough to get multiplayer built-in to the game for ``free'', i.e. taken as granted.
 
 \subsubsection{Unity SDK}
-The Unity SDK is arguably the most stable, mature SDK because it is not in beta unlike the Unreal SDK. From prior industrial experience, the Unity integration is also easier to implement quick prototypes with and iterate on. \\
+Of the two game engine integrations, the Unity SDK is arguably the most stable SDK because it has been in development for far longer than the Unreal SDK, and it is not in beta. From prior industrial experience, the Unity integration is also easier to implement quick prototypes with and iterate on.
 
-A benefit of SpatialOS's Unity SDK is that creating a sole game client, without manually writing network code, is almost enough to get multiplayer built-in to the game for ``free''.
+\subsubsection{Abstraction}
+SpatialOS adopts an \textbf{Entity}-\textbf{Component}-\textbf{Worker} model.
+\begin{itemize}
+  \item \textbf{Entities} are anything in the world that have a position.
+  \item \textbf{Components} define state and how other entities interact with them.
+  \item \textbf{Workers} are micro-services that simulate components of entities in the world.
+\end{itemize}
+
+\subsubsection{Developer Tools}
+There is extensive logging of performance metrics, which is a fantastic starting point for scaling up a simulation\cite{Brighting}. In addition to this, there is an active developer \textbf{Forum} - where SpatialOS developers and Improbable engineers meet to help other SDK users solve their problems\cite{ImprobableWorldsLtd.2018c}. \\
+
+Naturally as the public SDKs have matured, so too have the public-facing developer tools. Currently, there is an \textbf{Inspector} to view the location of entities and the values that their components have at a given time, in either a local or deployed simulation.
+
+\begin{figure}[!hbpt]
+  \center
+  \includegraphics[width=\linewidth]{img/io_inspector.png}
+  \caption{The Inspector demonstrating a deployment of the iOS Demo, \textit{Quest}. \cite{ImprobableWorldsLtd.2017}}
+  \label{fig:bg_scalable_zones}
+\end{figure}
 
 \subsubsection{Layered Simulation}
-\subsubsection{Distributed Simulation}
+By virtue of games having several dynamic systems all interlinking with each other, it is possible to create layered simulations on SpatialOS. This works well with the concept of Global, Reactive and Zonal layers that have been mentioned already in Sections 2.4, 2.5 and 2.6. Furthermore, as SpatialOS is distributed by nature, it is the ideal platform to create and execute massive layered, distributed simulations.
+
 
 %**********************************************%
-\newpage
-\section{Prioritising Economic Value}
-Thus far, we have shown that whilst there is great scope to utilise drones for delivery of physical goods, the existing implementation of AATC only touches upon the routing aspect - how to get from point A to point B. Even in all the test cases, the drones' start and end points were hand-picked by the developers\cite{Balaji2017} to give an insight into how AATC would operate in a variety of scenarios. \\
+% \newpage
+% \section{Prioritising Economic Value}
+% Thus far, we have shown that whilst there is great scope to utilise drones for delivery of physical goods, the existing implementation of AATC only touches upon the routing aspect - how to get from point A to point B. Even in all the test cases, the drones' start and end points were hand-picked by the developers\cite{Balaji2017} to give an insight into how AATC would operate in a variety of scenarios. \\
+%
+% To gain greater understanding of how drones can positively impact industries, simulations need to be performed which take into account the financial aspect of their use case. For example when it comes to drone delivery networks, we want to ensure that the drones not only reach their destination quickly, but that they also get scheduled and utilised in the appropriate manner to maximise the profitability of the network.
+%
+% \subsection{Quality of Service Value Curve}
+% In order to consider how to maximise profitability, we introduce the concept of a Value Curve related to the Quality of Service (QoS) provided. Rather than deal with the fixed pricing model of delivery fees as we see in the current day, we propose a new mechanism where the cost of the delivery is modelled on a curve closely related to the QoS. \\
+%
 
-To gain greater understanding of how drones can positively impact industries, simulations need to be performed which take into account the financial aspect of their use case. For example when it comes to drone delivery networks, we want to ensure that the drones not only reach their destination quickly, but that they also get scheduled and utilised in the appropriate manner to maximise the profitability of the network.
-
-\subsection{Quality of Service}
-\subsection{Value Curve}
 
 %**********************************************%
 \newpage
